Name:          pb
Version:       0.1
Synopsis:      pastebin command line application
Description:
  A simple pastebin command line application. Currently supports gist.
Author:        Dominik Picheta
Maintainer:    morfeusz8@gmail.com
Cabal-Version: >= 1.2
License: BSD3
build-type: Simple
Executable pb
  Main-is:           pb.hs
  Build-Depends:     base >= 3 && < 5, process >= 1.0.1.3, HTTP >= 4000.0.9
                     , network >= 2.2.1.7, containers >= 0.3.0.0

